<resources>
    <string name="app_name">lr1_428_09</string>
    <string name="title">Вычисление аргумента полинома</string>
    <string name="subtitle">Метод дихотомии для a0 + a1·x + a2·x^2</string>

    <string name="label_a0">Коэффициент a0</string>
    <string name="label_a1">Коэффициент a1</string>
    <string name="label_a2">Коэффициент a2</string>
    <string name="label_fx">Значение функции f(x)</string>
    <string name="label_eps">Допустимая погрешность ε</string>

    <string name="hint_number">Введите число</string>

    <string name="btn_compute">Вычислить x</string>
    <string name="result_title">Результат</string>
    <string name="result_x">Значение x:</string>
    <string name="result_err">Погрешность:</string>

    <string name="error_input">Проверьте корректность введённых данных</string>
    <string name="error_no_root">Корень не найден на заданном интервале</string>
    <string name="interval_hint">Интервал поиска корня [L, R]</string>
    <string name="label_left">Левая граница L</string>
    <string name="label_right">Правая граница R</string>
</resources>